<resources>

    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Status task -->
    <string name="status_task_todo">A fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feita</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="password_text">Senha</string>
    <string name="email_empty">Preencha seu e-mail!</string>
    <string name="email_text">E-mail</string>
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada!</string>
    <string name="text_list_task_load">Aguarde, estamos carregando as informações!</string>
    <string name="text_delete_sucess_task">Tarefa removida com sucesso.</string>


    <!--Login Fragment -->
    <string name="text_title_login_fragment">Login</string>
    <string name="text_button_register_login_fragment">Criar conta</string>
    <string name="text_button_recover_login_fragment">Recuperar conta</string>

    <!--Register Fragment -->
    <string name="email_empty_register_fragment">Preencha um e-mail válido.</string>
    <string name="password_empty_register_fragment">Preencha uma senha.</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="text_title_toolbar_register_fragment">Criar conta</string>

    <!-- Recover Account Fragment -->
    <string name="text_info_recover_account_fragment">Informe seu email de cadastro para receber \n um link para alteração de senha.</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_recover_account_fragment">Enviar</string>
    <string name="text_message_recover_account_fragment">Solicatação enviada para o email de recuperação!</string>


    <!--Form Task Fragment -->
    <string name="description_empty_form_task_fragment">Preencha uma descrição.</string>
    <string name="text_title_form_task_fragment">Nova tarefa</string>
    <string name="text_description_form_task_fragment">Descrição</string>
    <string name="text_status_form_task_fragment">Status</string>
    <string name="text_button_save_form_task_fragment">Salvar</string>
    <!-- Home fragment -->
    <string name="text_title_dialog_confirma_logout">Deseja sair da sua conta?</string>
    <string name="text_button_dialog_confirm_logout">Confirmar</string>
    <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair da sua conta</string>


    <string name="exit">Sair</string>
    <string name="Encerrarsessao">Encerrar sessão</string>
    <string name="error_generic">Ocorreu um erro! Por favor Tente novamente mais tarde.</string>
    <string name="text_save_sucess_task_fragment">Tarefa criada!</string>

    <string name="description_empty_fome_task_fragment">Preencha uma descrição!</string>
    <string name="text_save_sucess_form_task_fragment">Tarefa salva com sucesso</string>
    <string name="text_title_dialog_delete">Deseja remover a tarefa?</string>
    <string name="text_message_dialog_delete">Aperte em confirmar para remover a tarefa</string>
    <string name="text_button_dialog_confirm">Confirmar</string>


</resources>
